--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ python = "^3.11"
 django = "3.1.14"
 djangorestframework = "^3.14.0"
 django-environ = "^0.10.0"
-
+django-mysql = "^3.8.1"
+mysqlclient = "^2.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
