--- a/example.env
+++ b/example.env
@@ -10,3 +10,6 @@ DB_USER=root
 DB_PASSWORD="YOUR_PASSWORD"
 DB_HOST=localhost
 DB_PORT=3306
+
+CELERY_BROKER_URL="redis://localhost:6379/0"
+CELERY_RESULT_BACKEND="redis://localhost:6379/0"
