--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ django-mysql = "^3.8.1"
 mysqlclient = "^2.2.0"
 selenium = "^4.11.2"
 celery = {extras = ["redis"], version = "^5.3.1"}
+flower = "^2.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
