--- a/example.env
+++ b/example.env
@@ -13,3 +13,6 @@ DB_PORT=3306
 
 CELERY_BROKER_URL="redis://localhost:6379/0"
 CELERY_RESULT_BACKEND="redis://localhost:6379/0"
+
+BOT_TOKEN="YOUR_TOKEN"
+CHAT_ALERT="YOUR_TG_ID"
