--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ mysqlclient = "^2.2.0"
 selenium = "^4.11.2"
 celery = {extras = ["redis"], version = "^5.3.1"}
 flower = "^2.0.0"
+requests = "^2.31.0"
 
 
 [tool.poetry.group.dev.dependencies]
