--- a/example.env
+++ b/example.env
@@ -2,17 +2,25 @@ DEBUG=True
 
 SECRET_KEY="YOUR_SECRET_KEY"
 
-ALLOWED_HOSTS=localhost
+ALLOWED_HOSTS=''
+
+DJANGO_SUPERUSER_USERNAME=root
+DJANGO_SUPERUSER_EMAIL=root@root.com
+DJANGO_SUPERUSER_PASSWORD="YOUR_PASSWORD"
 
 DB_ENGINE=django.db.backends.mysql
 DB_NAME=db_ozon_parser
 DB_USER=root
 DB_PASSWORD="YOUR_PASSWORD"
-DB_HOST=localhost
+DB_HOST=database
 DB_PORT=3306
 
-CELERY_BROKER_URL="redis://localhost:6379/0"
-CELERY_RESULT_BACKEND="redis://localhost:6379/0"
+REDIS_HOST=redis
+CELERY_BROKER_URL="redis://redis:6379/0"
+CELERY_RESULT_BACKEND="redis://redis:6379/0"
+
+SELENIUM_HOST=selenium
+SELENIUM_URL="http://selenium:4444/wd/hub"
 
 BOT_TOKEN="YOUR_TOKEN"
 CHAT_ALERT="YOUR_TG_ID"
