--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,13 @@ packages = [{include = "django_ozon_parser"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-django = "3.1.14"
+django = "^4.2.4"
 djangorestframework = "^3.14.0"
 django-environ = "^0.10.0"
-django-mysql = "^3.8.1"
+django-mysql = "^4.11.0"
 mysqlclient = "^2.2.0"
 selenium = "^4.11.2"
 celery = {extras = ["redis"], version = "^5.3.1"}
-flower = "^2.0.0"
 requests = "^2.31.0"
 drf-yasg = "^1.21.7"
 django-adminlte3 = "^0.1.6"
