--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,24 @@ django-adminlte3 = "^0.1.6"
 black = "^23.7.0"
 isort = "^5.12.0"
 
+[tool.black]
+line-length = 80
+target-version = ['py310']
+exclude = '''
+/(
+  | \.git
+  | \.mypy_cache
+  | \.venv
+  | env
+  | venv
+)/
+'''
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+combine_as_imports = true
+line_length = 80
 
 [build-system]
 requires = ["poetry-core"]
