--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.4'
 
 services:
   django:
@@ -6,12 +6,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: final
+
     ports:
       - '8000:8000'
     env_file:
       - .env
     restart: always
-    command: sh prestart.sh
+    command: bash prestart.sh
     depends_on:
       selenium-hub:
         condition: service_started
@@ -25,6 +27,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      target: final
     env_file:
       - .env
     restart: always
